# FFiBrE

./: .envrc  .gitignore  Cargo.toml  README.md  build.rs
src/: ffibre.udl  ffibre_error.rs  lib.rs  network.udl  network_error.rs
src/gateway_client/: gateway_client.rs  mod.rs
src/gateway_client/responses/: mod.rs
src/http_client/: http_client.rs  http_client_request_sender.rs  network_response.rs  network_result.rs
src/internal/: ffi_operation_dispatcher.rs  ffi_operation_executor.rs  ffi_operation_handler.rs  ffi_operation_outcome_listener.rs  ffi_operation_result_listener.rs  is_outcome_listener.rs  mod.rs
src/internal/ffi_operation/: ffi_operation.rs  ffi_operation_dispatcher.rs  ffi_operation_handler.rs  ffi_operation_ok.rs  ffi_operation_result.rs  ffi_operation_result_listener.rs  ffi_result_into_result.rs  is_result_listener.rs  mod.rs
src/internal/logic/: ffi_dispatch_operation.rs  ffi_network_request_dispatcher.rs  ffi_operation_result_into_result.rs  gateway_client_make_request.rs  http_client_make_request.rs  mod.rs  network_result_into_result.rs  parse_xrd_balance_from_entity_details.rs
src/uniffi_exported/: mod.rs  network_result_listener.rs
src/uniffi_exported/example_async_stream/: mod.rs  subscribe_to_stream.rs
src/uniffi_exported/example_async_stream_from_rust/: subscribe_to_stream.rs
tests/: main.rs  test.swift  test_async_stream.swift  test_async_stream_from_kotlin.kts  test_async_stream_from_rust.swift  test_async_stream_from_swift.swift  test_file_io.kts  test_file_io.swift  test_networking.kts  test_networking.swift
(+68 files in other folders)
