[package]
name = "uniffi-async-poc"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
uniffi = { version = "0.26.1", features = ["build"] }

[dependencies]
async_cell = "0.2.2"
futures = { version = "0.3.30", features = ["thread-pool"] }
rust_decimal = "1.34.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.113", features = ["preserve_order"] }
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["sync"] }
uniffi = { version = "0.26.1", features = ["bindgen-tests"] }
url = "2.5.0"

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
