[package]
name = "ffibre"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
uniffi = { version = "0.26.1", features = ["build"] }

[dependencies]
tokio = { version = "1.35.1", features = ["sync", "rt"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.113", features = ["preserve_order"] }
thiserror = "1.0.56"
uniffi = { version = "0.26.1", features = ["bindgen-tests"] }
enum-as-inner = "0.6.0"
async-task = "4.7.0"
flume = "0.11.0"

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
